Worked on my reviews section on mobile. Gotten about halfway done. Still have to fix positioning.

--- a/css/footer.css
+++ b/css/footer.css
@@ -5,6 +5,7 @@
     --quaternery: #F5E8FF;
     --menu: #FBC117;
     --checkoutsuccess: #2F8D0E;
+    --reviews: #666666;
 }
 
 * {
